# llvm-rust

./: .gitignore  .gitmodules  Cargo.toml  INSTALL.md  Makefile  README.md
inkwell/: Cargo.toml  README.md
llutil/: Cargo.toml  README.md
llutil/src/: file.rs  lib.rs
llutil/src/instrument/: mod.rs
llutil/src/instrument/bug_annot/: annot_lexer.rs  annot_parser.rs  annot_token.rs  mod.rs
llutil/src/ir/: any_value.rs  array_value.rs  basic_block.rs  basic_value.rs  builtin.rs  callable_value.rs  code_file.rs  float.rs  function.rs  function_value.rs  instruction.rs  int_value.rs  integer.rs  metadata_value.rs  mod.rs  module.rs  path_condition.rs  pointer.rs  predecessor_block.rs  struct.rs  struct_value.rs  successor_block.rs  vector_value.rs
llutil/src/ir/instructions/: alloca_inst.rs  binary_operator.rs  branch_inst.rs  call_base.rs  call_inst.rs  callbr_inst.rs  cast_inst.rs  cmp_inst.rs  fcmp_inst.rs  icmp_inst.rs  indirectbr_inst.rs  invoke_inst.rs  load_inst.rs  mod.rs  phi_node.rs  predicate.rs  return_inst.rs  sext_inst.rs  store_inst.rs  switch_inst.rs  terminator_inst.rs  traits.rs  trunc_inst.rs  unary_operator.rs  unreachable_inst.rs  zext_inst.rs
llutil/src/normalize/: mod.rs  rename.rs  simplify.rs  transform.rs
llutil/src/tool/: clang.rs  compiler.rs  llvm.rs  llvm_as.rs  llvm_dis.rs  llvm_opt.rs  mod.rs  rustc.rs  solana.rs  solang.rs  solc.rs
llutil/tests/: main.rs  test_bug_annotation.rs  test_solang.rs
llutil/tests/testcases/solidity/: coin.sol  simple_storage.sol
llutil/tests/testcases/solidity/logs/simple_storage.sol/: bundle.bc
(+129 files in other folders)
