[package]
name = "llutil"
authors = ["Verazt's authors and contributors"]
version = "0.1.0"
edition = "2021"

[features]
linting = []

# Dependencies should be alphabetically sorted.
# Use package version in form of "x.y" to avoid updating them frequently.
[dependencies]
llvm_sys = { package = "llvm-sys", path = "../llvm-sys", version = "140.0.5" }
inkwell = { path = "../inkwell", features = ["internal-getters", "llvm14-0"] }
either = "1.5"
nom = "7.1"
nom_locate = "4.0"
regex = "1.5"
remain = "0.2"
semver = "1.0"
rutil = { git = "https://github.com/sbip-sg/rutil", version = "0.1.1" }

[dev-dependencies]
serial_test = "0.9.0"
